feat:参数赋值重构