@@ -2,7 +2,6 @@ package com.xh.easy.trafficreplay.service.core.allocator.parameter;
 
 import com.xh.easy.trafficreplay.service.model.ParameterInfo;
 
-import java.util.Collections;
 import java.util.List;
 
 import static com.xh.easy.trafficreplay.service.constant.LogStrConstant.LOG_STR;
@@ -12,16 +11,7 @@ import static com.xh.easy.trafficreplay.service.constant.LogStrConstant.LOG_STR;
  *
  * @author yixinhai
  */
-public class LogStrTransformer extends ParamTransformer {
-
-    private static final LogStrTransformer INSTANCE = new LogStrTransformer();
-
-    private LogStrTransformer() {
-    }
-
-    public static LogStrTransformer getInstance() {
-        return INSTANCE;
-    }
+public class LogStrTransformer extends MethodParamTransformer {
 
     @Override
     public boolean supports(ParameterInfo parameterInfo) {
@@ -32,6 +22,6 @@ public class LogStrTransformer extends ParamTransformer {
 
     @Override
     public List<Object> transform(ParameterInfo parameterInfo) {
-        return Collections.singletonList(LOG_STR);
+        return List.of(LOG_STR);
     }
 }
